argocd/base/argo-cd-ui-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: hetzner-prod-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.sts34.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
  tls:
  - hosts:
    - argocd.sts34.de
    secretName: argocd-server-tls
...
